feat: Developed the header and created a scss configuration file

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -11,9 +11,16 @@
 
 <body>
 
-</body>
-<h1>Desafio Cadastra</h1>
+  <header class="header">
+    <div class="header__logo">
+      <img src="./img/logo-header.png" alt="Logo" />
+    </div>
+    <div class="header__icon">
+      <img src="./img/icon-cart.png" alt="Icon" class="icon-image" />
+    </div>
+  </header>
 
+</body>
 <script src="bundle.js"></script>
 
 </html>
