fix: filter layout adjustment

--- a/src/index.html
+++ b/src/index.html
@@ -34,53 +34,50 @@
             </select>
         </div>
     </div>
-
-
-
     <div class="product-list__filters">
       <div class="product-list__filters-container cores">
         <p>Cores</p>
       </div>
       <div class="product-list__color-checkboxes">
         <div class="product-list__color-checkbox checkbox--yellow">
-          <input type="checkbox" id="checkbox-yellow" class="checkbox__input">
+          <input type="radio" id="checkbox-yellow" name="color" class="checkbox__input">
           <label for="checkbox-yellow" class="checkbox__label">Amarelo</label>
         </div>
         <div class="product-list__color-checkbox checkbox--blue">
-          <input type="checkbox" id="checkbox-blue" class="checkbox__input">
+          <input type="radio" id="checkbox-blue" class="checkbox__input">
           <label for="checkbox-blue" class="checkbox__label">Azul</label>
         </div>
         <div class="product-list__color-checkbox checkbox--white">
-          <input type="checkbox" id="checkbox-white" class="checkbox__input">
+          <input type="radio" id="checkbox-white" class="checkbox__input">
           <label for="checkbox-white" class="checkbox__label">Branco</label>
         </div>
         <div class="product-list__color-checkbox checkbox--gray">
-          <input type="checkbox" id="checkbox-gray" class="checkbox__input">
+          <input type="radio" id="checkbox-gray" class="checkbox__input">
           <label for="checkbox-gray" class="checkbox__label">Cinza</label>
         </div>
         <div class="product-list__color-checkbox checkbox--orange">
-          <input type="checkbox" id="checkbox-orange" class="checkbox__input">
+          <input type="radio" id="checkbox-orange" class="checkbox__input">
           <label for="checkbox-orange" class="checkbox__label">Laranja</label>
         </div>
         
         <div class="product-list__color-checkbox checkbox--green hidden">
-          <input type="checkbox" id="checkbox-green" class="checkbox__input">
+          <input type="radio" id="checkbox-green" class="checkbox__input">
           <label for="checkbox-green" class="checkbox__label">Verde</label>
         </div>
         <div class="product-list__color-checkbox checkbox--red hidden">
-          <input type="checkbox" id="checkbox-red" class="checkbox__input">
+          <input type="radio" id="checkbox-red" class="checkbox__input">
           <label for="checkbox-red" class="checkbox__label">Vermelho</label>
         </div>
         <div class="product-list__color-checkbox checkbox--black hidden">
-          <input type="checkbox" id="checkbox-black" class="checkbox__input">
+          <input type="radio" id="checkbox-black" class="checkbox__input">
           <label for="checkbox-black" class="checkbox__label">Preto</label>
         </div>
         <div class="product-list__color-checkbox checkbox--pink hidden">
-          <input type="checkbox" id="checkbox-pink" class="checkbox__input">
+          <input type="radio" id="checkbox-pink" class="checkbox__input">
           <label for="checkbox-pink" class="checkbox__label">Rosa</label>
         </div>
         <div class="product-list__color-checkbox checkbox--wine hidden">
-          <input type="checkbox" id="checkbox-wine" class="checkbox__input">
+          <input type="radio" id="checkbox-wine" class="checkbox__input">
           <label for="checkbox-wine" class="checkbox__label">Vinho</label>
         </div>
         <span id="toggle-color-filters" class="product-list__toggle-filters">Ver todas as cores
