feat: Created cards dynamically and added hide and show functionality

--- a/src/index.html
+++ b/src/index.html
@@ -135,15 +135,12 @@
           </div>
         </div>
       </div>
-      <div class="product-list__grid">
-        <div class="product-card">
-          <img src="./img/img_10.png" alt="Produto" class="product-card__image">
-          <p class="product-card__title">Nome do Produto</p>
-          <p class="product-card__price">R$ 99,99</p>
-          <p class="product-card__discount">Até 3x de R$40,00</p>
-          <button class="product-card__button">Comprar</button>
-        </div>
+      <div id="product-container" class="product-list__grid">
+        <div class="product-card"></div>
       </div>
+    </div>
+    <div class="product-list__button">
+      <button id="see-more-button" class="see-more-button">Carregar mais</button>
     </div>
     
   </main>
