feat: developed the footer

--- a/src/index.html
+++ b/src/index.html
@@ -145,6 +145,12 @@
     
   </main>
 
+  <footer class="footer">
+    <div class="footer__container">
+      <p class="footer__content">CADASTRA: Implantação de E-commerce VTEX</p>
+    </div>
+  </footer>
+
 </body>
 <script src="bundle.js"></script>
 
