feat: developed the checkbox filter

--- a/src/index.html
+++ b/src/index.html
@@ -43,50 +43,50 @@
   
         <div class="product-list__color-checkboxes">
           <div class="product-list__color-checkbox checkbox--yellow">
-            <input type="radio" id="checkbox-yellow" name="color" class="checkbox__input">
+            <input type="checkbox" id="checkbox-yellow" value="Amarelo" class="checkbox__input">
             <label for="checkbox-yellow" class="checkbox__label">Amarelo</label>
           </div>
           <div class="product-list__color-checkbox checkbox--blue">
-            <input type="radio" id="checkbox-blue" class="checkbox__input">
+            <input type="checkbox" id="checkbox-blue" value="Azul" class="checkbox__input">
             <label for="checkbox-blue" class="checkbox__label">Azul</label>
           </div>
           <div class="product-list__color-checkbox checkbox--white">
-            <input type="radio" id="checkbox-white" class="checkbox__input">
+            <input type="checkbox" id="checkbox-white" value="Branco" class="checkbox__input">
             <label for="checkbox-white" class="checkbox__label">Branco</label>
           </div>
           <div class="product-list__color-checkbox checkbox--gray">
-            <input type="radio" id="checkbox-gray" class="checkbox__input">
+            <input type="checkbox" id="checkbox-gray" value="Cinza" class="checkbox__input">
             <label for="checkbox-gray" class="checkbox__label">Cinza</label>
           </div>
           <div class="product-list__color-checkbox checkbox--orange">
-            <input type="radio" id="checkbox-orange" class="checkbox__input">
+            <input type="checkbox" id="checkbox-orange" value="Laranja" class="checkbox__input">
             <label for="checkbox-orange" class="checkbox__label">Laranja</label>
           </div>
           <div class="product-list__color-checkbox checkbox--green hidden">
-            <input type="radio" id="checkbox-green" class="checkbox__input">
+            <input type="checkbox" id="checkbox-green" value="Verde" class="checkbox__input">
             <label for="checkbox-green" class="checkbox__label">Verde</label>
           </div>
           <div class="product-list__color-checkbox checkbox--red hidden">
-            <input type="radio" id="checkbox-red" class="checkbox__input">
+            <input type="checkbox" id="checkbox-red" value="Vermelho" class="checkbox__input">
             <label for="checkbox-red" class="checkbox__label">Vermelho</label>
           </div>
           <div class="product-list__color-checkbox checkbox--black hidden">
-            <input type="radio" id="checkbox-black" class="checkbox__input">
+            <input type="checkbox" id="checkbox-black" value="Preto" class="checkbox__input">
             <label for="checkbox-black" class="checkbox__label">Preto</label>
           </div>
           <div class="product-list__color-checkbox checkbox--pink hidden">
-            <input type="radio" id="checkbox-pink" class="checkbox__input">
+            <input type="checkbox" id="checkbox-pink" value="Rosa" class="checkbox__input">
             <label for="checkbox-pink" class="checkbox__label">Rosa</label>
           </div>
           <div class="product-list__color-checkbox checkbox--wine hidden">
-            <input type="radio" id="checkbox-wine" class="checkbox__input">
+            <input type="checkbox" id="checkbox-wine" value="Vinho" class="checkbox__input">
             <label for="checkbox-wine" class="checkbox__label">Vinho</label>
           </div>
           <span id="toggle-color-filters" class="product-list__toggle-filters">Ver todas as cores
             <img src="./img/icon-select.png" alt="Ícone" class="product-list__icon" />
           </span>
         </div>
-  
+        
         <div class="product-list__filters-container tamanho">
           <p>Tamanhos</p>
         </div>
@@ -113,24 +113,24 @@
   
           <div class="product-list__price-checkboxes">
             <div class="product-list__price-checkbox checkbox--first">
-              <input type="checkbox" id="checkbox-first" class="checkbox__input">
+              <input type="checkbox" id="checkbox-first" value="0-50" class="checkbox__input">
               <label for="checkbox-first" class="checkbox__label">de R$0 até R$50</label>
             </div>
             <div class="product-list__price-checkbox checkbox--second">
-              <input type="checkbox" id="checkbox-second" class="checkbox__input">
+              <input type="checkbox" id="checkbox-second" value="51-150" class="checkbox__input">
               <label for="checkbox-second" class="checkbox__label">de R$51 até R$150</label>
             </div>
             <div class="product-list__price-checkbox checkbox--third">
-              <input type="checkbox" id="checkbox-third" class="checkbox__input">
+              <input type="checkbox" id="checkbox-third" value="151-300" class="checkbox__input">
               <label for="checkbox-third" class="checkbox__label">de R$151 até R$300</label>
             </div>
             <div class="product-list__price-checkbox checkbox--fourth">
-              <input type="checkbox" id="checkbox-fourth" class="checkbox__input">
+              <input type="checkbox" id="checkbox-fourth" value="301-500" class="checkbox__input">
               <label for="checkbox-fourth" class="checkbox__label">de R$301 até R$500</label>
             </div>
             <div class="product-list__price-checkbox checkbox--fifth">
-              <input type="checkbox" id="checkbox-fifth" class="checkbox__input">
-              <label for="checkbox-fifth" class="checkbox__label">a partir de R$ 500</label>
+              <input type="checkbox" id="checkbox-fifth" value="500+" class="checkbox__input">
+              <label for="checkbox-fifth" class="checkbox__label">a partir de R$500</label>
             </div>
           </div>
         </div>
