--- a/src/index.html
+++ b/src/index.html
@@ -92,17 +92,16 @@
         </div>
         <div class="size-container">
           <div class="size-grid">
-            <button class="size-item">p</button>
-            <button class="size-item">M</button>
-            <button class="size-item">g</button>
-            <button class="size-item">gg</button>
-            <button class="size-item">U</button>
-            <button class="size-item">36</button>
-            <button class="size-item">38</button>
-            <button class="size-item">40</button>
-            <button class="size-item">36</button>
-            <button class="size-item">38</button>
-            <button class="size-item">40</button>
+            <button class="size-item" data-size="P">P</button>
+            <button class="size-item" data-size="M">M</button>
+            <button class="size-item" data-size="G">G</button>
+            <button class="size-item" data-size="GG">GG</button>
+            <button class="size-item" data-size="U">U</button>
+            <button class="size-item" data-size="36">36</button>
+            <button class="size-item" data-size="38">38</button>
+            <button class="size-item" data-size="40">40</button>
+            <button class="size-item" data-size="44">44</button>
+            <button class="size-item" data-size="46">46</button>
           </div>
         </div>
   
