feat: added the function of showing a counter in the cart

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
       </div>
       <div class="header__icon">
         <img src="./img/icon-cart.png" alt="Icon" class="icon-image" />
+        <div class="header__icon-count">
+          <span class="span-count">0</span>
+        </div>
       </div>
     </header>
   
